# estudos

./: .gitignore
ALURA-FRONTEND-CSS/: index.html
ALURA-FRONTEND-JS-FUNDAMENTOS-ARRAYS/: adicionando-nota.js  atualizando-lista.js  aula5-5.js  forEach.js  juntando-turmas.js  localizando-aluno.js  map-nomes.js  media-forEach.js  media-geral.js  reprovados.js
ALURA-FRONTEND-JS-FUNDAMENTOS-FUNCOES/: parametros.js
ALURA-FRONTEND-JS-FUNDAMENTOS-OBJETOS/: 1-objetos.js  22-bind.js  3-puxando-relatorio.js  acessar-lista.js  adicionar-campos.js  colecionador.js  compondo-objetos.js  deletar-campos.js  lista-dependentes.js  lista-unica.js
ALURA-FRONTEND-JS-PARTE 1/: 1-meuPrimeiroPrograma.js  2-trabalhadoComVariaveis.js  7-condicionais.js
ALURA-FRONTEND-JS-PARTE 2/: 1-index.js  Cliente.js  Conta.js  ContaCorrente.js  ContaPoupanca.js  package.json  teste.js
ALURA-FRONTEND-JS-PARTE 2-3/: 1-index.js  2-index.js  Cliente.js  SistemaAutenticacao.js
CURSO-VIDEO-PYTHON/: for.py  for02.py  for03.py  hipotenusa.py  ifElse.py  ifElse01.py  ifElse02.py  ifElse04.py  metodos.py  metodos02.py  numInt.py  precoPassagem.py  printMsg.py  printMsg03.py  random.py  soma.py  tabuada.py  tratandoString.py  tratandoString01.py  while02.py
LEETCODE-ALGORITMOS/: romanToInteger.js  twoSum.js
alura-scraping-python/: Web Scraping.ipynb  pyproject.toml
alura-scraping-python/.ipynb_checkpoints/: Web Scraping-checkpoint.ipynb
diversos/ramon/api-rest/: main.py  pyproject.toml
diversos/ramon/api-rest/src/controllers/: books.py
diversos/ramon/api-rest/src/server/: instance.py
(+344 files in other folders)
