[tool.poetry]
name = "alura-scraping-python"
version = "0.1.0"
description = ""
authors = ["Margarida <margaridammcm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.4.0"
notebook = "^6.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
