[tool.poetry]
name = "api-rest"
version = "0.1.0"
description = ""
authors = ["Margarida <margaridammcm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.0"
flask-restx = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
